--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/text-cursor.svg" type="image/x-icon">
-    <title>Raged Fingers|TestTheRageOfYourFingers|TypingSpeedTester</title>
+    <title>Raged Fingers</title>
     <link rel="stylesheet" href="RagedFingers.css">
 </head>
 <body>
@@ -84,7 +84,17 @@
                 <div>WPM: <span class="WPM">0</span> </div>
                 <div>CPM: <span class="CPM">0</span> </div>
             </div>
-            <div class="text" id="textBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla earum cupiditate atque ullam sequi tempore delectus, odio voluptates est dicta blanditiis, ipsa repellendus fugiat. Adipisci, eaque iusto. Repellat natus laboriosam omnis! Sed quam atque praesentium doloremque! Cum eaque voluptates ipsam similique odit hic quaerat iste quia sunt recusandae at expedita, voluptatibus, molestias blanditiis. Vitae dicta aspernatur aliquam tempora asperiores enim voluptatem ipsam eveniet odit sapiente, adipisci maxime expedita! Odio suscipit id ipsum accusamus error eligendi amet repellendus blanditiis exercitationem ratione laborum quo sunt quae repellat sapiente est, dolore doloribus magni dolorum explicabo aspernatur, veniam unde possimus molestias. Obcaecati culpa adipisci nemo debitis magni, ratione suscipit quam aut magnam assumenda ipsum officiis blanditiis eaque. Vel veniam accusamus inventore provident quia quod doloribus deserunt debitis. Facilis ducimus voluptates rem eos nesciunt voluptatum incidunt, magni esse ipsum libero ipsa sit aliquam possimus iure? Laudantium eos dolorem ipsam commodi nam ex inventore vero minima illum quam. Magni nostrum totam, fugiat optio delectus quod. Officia blanditiis qui dolorem? Incidunt numquam dolorem tempore in, eos doloremque, nesciunt a facilis quo reprehenderit ad velit ab rerum quas obcaecati molestiae similique accusamus animi eaque? Debitis provident praesentium dolores non? Eveniet at pariatur est quis minus modi repellat doloremque iusto quisquam, eius libero fugit earum, quaerat cupiditate culpa dolorum fugiat assumenda! Consequatur minima perferendis magnam animi laboriosam at quo recusandae incidunt perspiciatis, suscipit, corporis laborum distinctio natus praesentium veritatis repellat, et alias aliquam provident excepturi! Dolor, dolorum? Cumque vitae a aliquid, quo dicta iste consectetur quaerat expedita officiis corporis.    
+            <div class="text" id="textBox">
+                <div class="LoadingAnimation">
+                    <div class="forAnimation">
+                        <div class="heading"> 
+                            <img src="assets/typing.svg" alt=""> 
+                            <h1>Raged Fingers<span class="cursor-ani"></span></h1>
+                            <h4>Test The Rage Of Your Fingers</h4>
+                        </div>
+                    </div>
+                </div>
+                <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla earum cupiditate atque ullam sequi tempore delectus, odio voluptates est dicta blanditiis, ipsa repellendus fugiat. Adipisci, eaque iusto. Repellat natus laboriosam omnis! Sed quam atque praesentium doloremque! Cum eaque voluptates ipsam similique odit hic quaerat iste quia sunt recusandae at expedita, voluptatibus, molestias blanditiis. Vitae dicta aspernatur aliquam tempora asperiores enim voluptatem ipsam eveniet odit sapiente, adipisci maxime expedita! Odio suscipit id ipsum accusamus error eligendi amet repellendus blanditiis exercitationem ratione laborum quo sunt quae repellat sapiente est, dolore doloribus magni dolorum explicabo aspernatur, veniam unde possimus molestias. Obcaecati culpa adipisci nemo debitis magni, ratione suscipit quam aut magnam assumenda ipsum officiis blanditiis eaque. Vel veniam accusamus inventore provident quia quod doloribus deserunt debitis. Facilis ducimus voluptates rem eos nesciunt voluptatum incidunt, magni esse ipsum libero ipsa sit aliquam possimus iure? Laudantium eos dolorem ipsam commodi nam ex inventore vero minima illum quam. Magni nostrum totam, fugiat optio delectus quod. Officia blanditiis qui dolorem? Incidunt numquam dolorem tempore in, eos doloremque, nesciunt a facilis quo reprehenderit ad velit ab rerum quas obcaecati molestiae similique accusamus animi eaque? Debitis provident praesentium dolores non? Eveniet at pariatur est quis minus modi repellat doloremque iusto quisquam, eius libero fugit earum, quaerat cupiditate culpa dolorum fugiat assumenda! Consequatur minima perferendis magnam animi laboriosam at quo recusandae incidunt perspiciatis, suscipit, corporis laborum distinctio natus praesentium veritatis repellat, et alias aliquam provident excepturi! Dolor, dolorum? Cumque vitae a aliquid, quo dicta iste consectetur quaerat expedita officiis corporis.     -->
             </div>
             <input type="text" class="input-field">
             <div class="refresh" onclick="resetStats()">
