--- a/index.html
+++ b/index.html
@@ -29,10 +29,16 @@
             
             <div class="theme">
                 <img src="assets/paint.svg" alt="">
-                <h3>
-                    Theme
-                    <!-- BlackAndWhite -->
-                </h3>
+                <div class="setTheme">
+                    <h3>
+                        Theme
+                        <!-- BlackAndWhite -->
+                    </h3>
+                    <select name="" id="ThemeName">
+                        <option value="1">Black And White</option>
+                        <!-- <option value="2">Purple</option> -->
+                    </select>
+                </div>
             </div>
             
             <div class="text-gen-settings">
